--- a/EasyConsole.Netstandard/EasyConsole.Netstandard.csproj
+++ b/EasyConsole.Netstandard/EasyConsole.Netstandard.csproj
@@ -1,8 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>EasyConsole</RootNamespace>
+    <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>CS1591;CS1573</NoWarn>
+    <!-- 
+    CS1591: Missing XML comment for publicly visible type or member 'Type_or_Member'
+    CS1573: Parameter 'parameter' has no matching param tag in the XML comment for 'parameter' 
+            (but other parameters do)
+    -->
   </PropertyGroup>
 
 </Project>
