--- a/EasyConsole/EasyConsole.csproj
+++ b/EasyConsole/EasyConsole.csproj
@@ -14,4 +14,24 @@
     -->
   </PropertyGroup>
 
+  <!-- Nastavenbi balik -->
+  <PropertyGroup>
+    <PackageId>AsyncEasyConsole</PackageId>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Authors>splttingatms, reddy6ue, GodEmperorOfTime</Authors>
+    <Version>0.1.0-beta1</Version>
+    <Description>
+      EasyConsole is a library to make it easier for developers to build a simple menu interface for a .NET console application.
+    </Description>
+    <PackageReleaseNotes>
+      0.1.0-beta1: prvni testovaci vydani
+    </PackageReleaseNotes>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
 </Project>
